Bug 91603 - Discarding recovery data after a crash doesn't forward to the requested application
Summary: Discarding recovery data after a crash doesn't forward to the requested appli...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: All Linux (All)
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: needsDevEval
Depends on:
Blocks:
 
Reported: 2015-05-25 09:57 UTC by [REDACTED]
Modified: 2016-10-25 18:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description [REDACTED] 2015-05-25 09:57:45 UTC
If an application (for example Calc) crashes and it is started again it asks to recover or to discard the data. If the latter is choosen I would expect to get forwarded to the requested application but instead the LibreOffice main window opens.
Comment 1 Michael 2015-05-25 18:13:59 UTC
Confirmed in Fedora 21 x64, LO version: 5.1.0.0.alpha1+

Exact steps:
1) run:  ./opt/program/soffice --calc
2) type a few characters into a cell
3) Ctrl+C to kill calc without saving
4) run:  ./opt/program/soffice --calc
5) discard the recovery
6) observe that the generic LibreOffice splash screen starts

Expectation: 6) opens calc with a new document because calc was specified on the commandline
Comment 2 Joel Madero 2015-05-31 22:17:38 UTC
Trivial -

Has no real impact on creating professional work.

Trivial
Lowest - default for trivial bugs

Possibly an easy hack so requesting input.
Comment 3 Robinson Tryon (qubit) 2015-12-13 11:20:50 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2016-06-15 15:38:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1792493e765f8027c2605bd72b9978c6769a262d

Resolves: tdf#91603 if we cancel/discard recovery dialog, continue as normal

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.