Resolves: tdf#91603 if we cancel/discard recovery dialog, continue as normal

Change-Id: Ifd5df74063bcaf2f3a198b090ed2126449d7b8f8