svx/source/unodraw/recoveryui.cxx
@@ -107,7 +107,7 @@ class RecoveryUI : public ::cppu::WeakImplHelper< css::lang::XServiceInfo       
 
         bool impl_doEmergencySave();
 
-        void impl_doRecovery();
+        bool impl_doRecovery();
 
         void impl_showAllRecoveredDocs();
 
@@ -157,19 +157,25 @@ css::uno::Any SAL_CALL RecoveryUI::dispatchWithReturnValue(const css::util::URL&
 
     switch(eJob)
     {
-        case RecoveryUI::E_DO_EMERGENCY_SAVE :
+        case RecoveryUI::E_DO_EMERGENCY_SAVE:
         {
             bool bRet = impl_doEmergencySave();
             aRet <<= bRet;
             break;
         }
 
-        case RecoveryUI::E_DO_RECOVERY :
-            impl_doRecovery();
+        case RecoveryUI::E_DO_RECOVERY:
+        {
+            bool bRet = impl_doRecovery();
+            aRet <<= bRet;
             break;
+        }
 
-        default :
+        default:
+        {
+            aRet <<= false;
             break;
+        }
     }
 
     return aRet;
@@ -243,7 +249,7 @@ bool RecoveryUI::impl_doEmergencySave()
     return (nRet==DLG_RET_OK_AUTOLUNCH);
 }
 
-void RecoveryUI::impl_doRecovery()
+bool RecoveryUI::impl_doRecovery()
 {
     // create core service, which implements the real "emergency save" algorithm.
     svxdr::RecoveryCore* pCore = new svxdr::RecoveryCore(m_xContext, false);
@@ -254,11 +260,13 @@ void RecoveryUI::impl_doRecovery()
     ScopedVclPtrInstance<svxdr::RecoveryDialog> xDialog(m_pParentWindow, pCore);
 
     // start the dialog
-    xDialog->Execute();
+    short nRet = xDialog->Execute();
 
     impl_showAllRecoveredDocs();
 
     delete_pending_crash();
+
+    return nRet != RET_CANCEL;
 }
 
 void RecoveryUI::impl_showAllRecoveredDocs()
